objects/Proof_of_Value__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account</description>
        <formula>Supporting_Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Am_Lead_SE__c</fullName>
        <formula>$User.Id =  Lead_SE__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am Lead SE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Am_OD__c</fullName>
        <formula>$User.Id =  Security_OD__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am OD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Am_RM__c</fullName>
        <formula>$User.Id =  Security_RM__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am RM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Am_SEMGR__c</fullName>
        <formula>$User.Id = Security_SE_MGR__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am SEMGR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Am_sAM__c</fullName>
        <formula>$User.Id = Security_AM__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am SAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approximate_POV_List_Price__c</fullName>
        <inlineHelpText>List price of POV equipment being used for POV</inlineHelpText>
        <label>Approximate POV List Price ($000s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Architecture_Imperative_1__c</fullName>
        <description>Describe the relevant business imitative(s) that the customer has initiated to meet it’s business driver and that this POV will be satisfying</description>
        <inlineHelpText>Describe the relevant business imitative(s) that the customer has initiated to meet it’s business driver and that this POV will be satisfying</inlineHelpText>
        <label>Architecture Imperative 1</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Architecture_Imperative_2__c</fullName>
        <description>Describe the relevant business imitative(s) that the customer has initiated to meet it’s business driver and that this POV will be satisfying</description>
        <inlineHelpText>Describe the relevant business imitative(s) that the customer has initiated to meet it’s business driver and that this POV will be satisfying</inlineHelpText>
        <label>Architecture Imperative 2</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Architecture_Imperative_3__c</fullName>
        <description>Describe the relevant business imitative(s) that the customer has initiated to meet it’s business driver and that this POV will be satisfying</description>
        <inlineHelpText>Describe the relevant business imitative(s) that the customer has initiated to meet it’s business driver and that this POV will be satisfying</inlineHelpText>
        <label>Architecture Imperative 3</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BOMStatus__c</fullName>
        <label>BOMStatus</label>
        <summaryForeignKey>POV_eStar_Lineitem__c.Proof_of_Value__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BOM_Returned_Date__c</fullName>
        <label>BOM Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Drivers_Others__c</fullName>
        <description>Describe additional company business drivers that this POV will help achieve or improve</description>
        <inlineHelpText>Describe additional company business drivers that this POV will help achieve or improve</inlineHelpText>
        <label>Business Drivers Other</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Initiatives_Other__c</fullName>
        <description>Describe the relevant business imitative(s) that the customer has initiated to meet the described business driver and that this POV will be satisfying</description>
        <inlineHelpText>Describe the relevant business imitative(s) that the customer has initiated to meet the described business driver and that this POV will be satisfying</inlineHelpText>
        <label>Business Initiatives Other</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRCountry__c</fullName>
        <formula>Supporting_Opportunity__r.Account.CRCountry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRCountry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_or_Program__c</fullName>
        <description>Campaign or Program</description>
        <inlineHelpText>N/A-This field is unused at this time</inlineHelpText>
        <label>Campaign or Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-None-</fullName>
                    <default>true</default>
                    <label>-None-</label>
                </value>
                <value>
                    <fullName>PoV Phase One</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compelling_Events_For_Decision__c</fullName>
        <description>Compelling events for decision</description>
        <inlineHelpText>Any projects, preceding security event, or specific customer timeline that is driving / compelling the execution of the POV and the close of the opportunity</inlineHelpText>
        <label>Compelling Events For Decision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Dynamics__c</fullName>
        <description>Identify any incumbent or new competitive players for this opportunity and POV.</description>
        <inlineHelpText>Identify any incumbent or new competitive players for this opportunity and POV</inlineHelpText>
        <label>Competitive Dynamics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cooperative_Products_Deployed__c</fullName>
        <description>Identify any products or services that may provide cooperative integration for better position of the POV within the customer opportunity.</description>
        <inlineHelpText>Identify any products or services that may provide cooperative integration for better position of the POV within the customer opportunity</inlineHelpText>
        <label>Cooperative Products Deployed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(Supporting_Opportunity__r.Account.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Engagements_Events_CEE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Engagements &amp; Events (CEE)</description>
        <label>Customer Engagements &amp; Events (CEE)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CEE__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>01234000000BmCR, 01234000000BmCR</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CEE__c</referenceTo>
        <relationshipLabel>Proof of Values</relationshipLabel>
        <relationshipName>Proof_of_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customers_Technical_Requirements__c</fullName>
        <description>Note any specific physical or virtual configurations or performance needs in order to be successful (ie. 10+ Gbps or assymetric routing conditions).</description>
        <inlineHelpText>Note any specific physical or virtual configurations or performance needs in order to be successful (ie. 10+ Gbps or assymetric routing conditions)</inlineHelpText>
        <label>Customer Technical Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <description>Deal ID</description>
        <formula>Supporting_Opportunity__r.DealID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <description>Decision Date</description>
        <inlineHelpText>When will the decision be made on the project?</inlineHelpText>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Process__c</fullName>
        <description>Decision Process</description>
        <inlineHelpText>Describe the purchasing authorities, any relevant budget and decision-making processes to ensure a successful win of the sales opportunity</inlineHelpText>
        <label>Decision Process</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Differentiated_Solutions_Other__c</fullName>
        <description>Describe the unique Cisco solution offering or capabilities that will be offered to meet the requirements of the business initiative and deliver on the customer’s business drivers</description>
        <inlineHelpText>Describe the unique Cisco solution offering or capabilities that will be offered to meet the requirements of the business initiative and deliver on the customer’s business drivers</inlineHelpText>
        <label>Differentiated Solutions Other</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EULA_Date__c</fullName>
        <description>Docusign Completed Date</description>
        <label>EULA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EULA_Status__c</fullName>
        <description>Docusign EULA Status</description>
        <label>EULA Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Bookings__c</fullName>
        <inlineHelpText>Estimation of bookings revenue from this POV</inlineHelpText>
        <label>Expected Bookings ($000s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Explicit_Customer_Requirements__c</fullName>
        <description>Explicitly documented or stated product capabilities the customer has stated as “being required”. If an RFP is involved, please attach the RFP and response to the POV.</description>
        <inlineHelpText>Explicitly documented or stated product capabilities the customer has stated as “being required”. If an RFP is involved, please attach the RFP and response to the POV.</inlineHelpText>
        <label>Explicit Customer Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Approval_Date__c</fullName>
        <label>Final Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hardware_Source__c</fullName>
        <description>The source of the hardware</description>
        <label>Hardware Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco/DLP</fullName>
                </value>
                <value>
                    <fullName>Cisco Seed Unit Program (Owned by BU-Electra e.g.-for partners)</fullName>
                </value>
                <value>
                    <fullName>Distribution (for Partners to acquire gear from Distis)</fullName>
                </value>
                <value>
                    <fullName>Partner Provided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implicit_Customer_Requirements__c</fullName>
        <description>Unstated and observed requirements that may need to be met to achieve success (ie. Inexperienced security team: drive ease of use).</description>
        <inlineHelpText>Unstated and observed requirements that may need to be met to achieve success (ie. Inexperienced security team: drive ease of use)</inlineHelpText>
        <label>Implicit Customer Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incumbent_Vendor__c</fullName>
        <description>Note the current incumbent solutions within the account</description>
        <inlineHelpText>Note the current incumbent solutions within the account</inlineHelpText>
        <label>Incumbent Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check Point</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Emerging Threats</fullName>
                </value>
                <value>
                    <fullName>Endace</fullName>
                </value>
                <value>
                    <fullName>Enterasys</fullName>
                </value>
                <value>
                    <fullName>Fortinet</fullName>
                </value>
                <value>
                    <fullName>IBM ISS</fullName>
                </value>
                <value>
                    <fullName>Juniper</fullName>
                </value>
                <value>
                    <fullName>McAfee</fullName>
                </value>
                <value>
                    <fullName>NitroSecurity</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other – Competitor in Comments</fullName>
                </value>
                <value>
                    <fullName>Palo Alto Networks</fullName>
                </value>
                <value>
                    <fullName>Radware</fullName>
                </value>
                <value>
                    <fullName>Reflex Security</fullName>
                </value>
                <value>
                    <fullName>Snort</fullName>
                </value>
                <value>
                    <fullName>StillSecure</fullName>
                </value>
                <value>
                    <fullName>Stonesoft</fullName>
                </value>
                <value>
                    <fullName>TippingPoint</fullName>
                </value>
                <value>
                    <fullName>Top Layer</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_eSTAR_Order_Open_Closed__c</fullName>
        <description>Is eSTAR_Order_Status Open or Closed?</description>
        <formula>IF ((UPPER(TEXT(eSTAR_Order_Status__c)) = 'RETURNED' ||
     UPPER(TEXT(eSTAR_Order_Status__c)) = 'CLOSED'), 
    'Closed',
    'Open'
) 


/*IF (
    TEXT(eSTAR_Order_Status__c)= 'OVERDUE', 
        'Open',

    IF(TEXT(eSTAR_Order_Status__c)= 'PARTIALLY RETURNED', 
        'Open',

    IF(TEXT(eSTAR_Order_Status__c)= 'PARTIALLY SHIPPED', 
        'Open',

    IF(TEXT(eSTAR_Order_Status__c)= 'SHIPPED', 
        'Open',


    IF(TEXT(eSTAR_Order_Status__c) = 'Returned',
            'Closed',
            ''
       )
       )
       )
       )

)
*/
/*
--Category eStar Order Status
--Closed	Returned
--n/a	CANCELLED
--Open	OVERDUE
--Open	PARTIALLY RETURNED
--Open	PARTIALLY SHIPPED
--Open	SHIPPED
--Pre-Ship 	(blank)
--Pre-Ship	ORDER CREATED
--Pre-Ship	PARTIALLY BACKLOGGED
--Pre-Ship	PENDING APPROVAL
--Pre-Ship	PENDING SHIPMENT
--Pre-Ship	SHIP HOLD
--Pre-Ship	SHIPMENT IN PROGRESS

*/</formula>
        <label>Is eSTAR Order Open/Closed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Know_Requirements_not_Met__c</fullName>
        <description>Note any technical, explicit, or implicit requirements that are not met by the Cisco solution being offered</description>
        <inlineHelpText>Note any technical, explicit, or implicit requirements that are not met by the Cisco solution being offered</inlineHelpText>
        <label>Known Requirements not Met</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_SE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead Security Engineer</description>
        <inlineHelpText>This is the lead SE for the POV execution (usually the Security CSE or SE Specialist)</inlineHelpText>
        <label>Lead SE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proof_of_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lessons_From_Previous_POV__c</fullName>
        <description>Note any lessons learned from post POVs of similar type (won or lost) that may help ensure success in this POV</description>
        <inlineHelpText>Note any lessons learned from post POVs of similar type (won or lost) that may help ensure success in this POV</inlineHelpText>
        <label>Lessons From Previous POV</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_DLP_Hardware_Provider__c</fullName>
        <inlineHelpText>Document the name of the Cisco program, partner account, or other external resource for hardware being used for the POV.</inlineHelpText>
        <label>Identify non-DLP Hardware Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Workspace__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity Workspace</description>
        <inlineHelpText>Link to SAM / AM opportunity workspace (searchable)</inlineHelpText>
        <label>Opportunity Workspace</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Supporting_Opportunity__c</field>
                <operation>equals</operation>
                <valueField>AT_Workspace__c.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AT_Workspace__c</referenceTo>
        <relationshipLabel>Proof of Values</relationshipLabel>
        <relationshipName>Proof_of_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderDetailsToeStar__c</fullName>
        <formula>HYPERLINK("http://dlp.cloudapps.cisco.com/GPSS/dlp/jsp/dlphome.jsp?sfoid=" &amp; MID(eSTAR_Order_No__c, 2,LEN(eSTAR_Order_No__c)) , eSTAR_Order_No__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number_Link__c</fullName>
        <description>Link to order # after removing the "D" from order #.</description>
        <formula>"http://dlp.cloudapps.cisco.com/GPSS/dlp/jsp/dlphome.jsp?sfoid=" &amp; MID(eSTAR_Order_No__c, 2,LEN(eSTAR_Order_No__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>Order Number</description>
        <inlineHelpText>Order Number</inlineHelpText>
        <label>Order Number from estar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organizational_Role__c</fullName>
        <description>Organizational Role</description>
        <inlineHelpText>Drop Down – Specify the most relevant business unit within the account that is responsible for this opportunity and POV</inlineHelpText>
        <label>Organizational Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Helpdesk</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <label>Owner Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>CreatedBy.FirstName   +  " " + CreatedBy.LastName</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POV_Age__c</fullName>
        <description>POV Age</description>
        <formula>IF (
    Is_eSTAR_Order_Open_Closed__c = 'Open', 
        TODAY()-eStar_Ship_Date__c,
    IF(Is_eSTAR_Order_Open_Closed__c  = 'Closed',
            BOM_Returned_Date__c  - eStar_Ship_Date__c,
            NULL
       )

)

/*
--If eStar Order Status = Open,
--Today() – eStar Ship Date
--If eStar Order Status = Closed ,
--BOM Returned Date – eStar Ship Date
*/</formula>
        <label>POV Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POV_Agreement_Exception__c</fullName>
        <defaultValue>"No"</defaultValue>
        <description>POV Agreement Exception</description>
        <label>POV Agreement Exception</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POV_Amount__c</fullName>
        <formula>IF(ISBLANK( eSTAR_Order_No__c ),  POV_Approved_Amount_Before_Order_Create__c ,  POV_Approved_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POV Amount($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POV_Approval_Status__c</fullName>
        <description>Shows the current approval state of this POV</description>
        <inlineHelpText>Shows the current approval state of this POV</inlineHelpText>
        <label>POV Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SE Manager Approved</fullName>
                </value>
                <value>
                    <fullName>SAM Work in Progress</fullName>
                </value>
                <value>
                    <fullName>SAM Submitted</fullName>
                </value>
                <value>
                    <fullName>RM Approved</fullName>
                </value>
                <value>
                    <fullName>OD Approved</fullName>
                </value>
                <value>
                    <fullName>SE Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>RM Rejected</fullName>
                </value>
                <value>
                    <fullName>OD Rejected</fullName>
                </value>
                <value>
                    <fullName>Lead SE Approved</fullName>
                </value>
                <value>
                    <fullName>Lead SE Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POV_Approved_Amount_Before_Order_Create__c</fullName>
        <label>POV  Amount($) Before Order Create</label>
        <summarizedField>POV_eStar_Lineitem__c.Ext_Price__c</summarizedField>
        <summaryForeignKey>POV_eStar_Lineitem__c.Proof_of_Value__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>POV_Approved_Amount__c</fullName>
        <label>POV Amount($) After Order Create</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POV_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>POV Contact 2</description>
        <label>POV Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proof of Values (POV Contact 2)</relationshipLabel>
        <relationshipName>Proof_of_Values2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POV_Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>POV Contact 3</description>
        <label>POV Contact 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proof of Values (POV Contact 3)</relationshipLabel>
        <relationshipName>Proof_of_Values3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POV_Contact_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>POV Contact 4</description>
        <label>POV Contact 4</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proof of Values (POV Contact 4)</relationshipLabel>
        <relationshipName>Proof_of_Values4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POV_Contact_Email__c</fullName>
        <description>POV Contact Email address</description>
        <formula>POV_Contact__r.Email</formula>
        <label>POV Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POV_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PoV Contact</description>
        <inlineHelpText>The customer contact that will receive and be responsible for execution of the POV</inlineHelpText>
        <label>POV Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proof of Values</relationshipLabel>
        <relationshipName>Proof_of_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POV_Days_Overdue__c</fullName>
        <description>POV Days Overdue</description>
        <formula>IF (
    (Is_eSTAR_Order_Open_Closed__c = 'Open' &amp;&amp; TODAY() &gt;  eStar_Original_Due_Date__c ), 
        TODAY() - eStar_Current_Due_Date__c ,
    IF((Is_eSTAR_Order_Open_Closed__c = 'Open'  &amp;&amp; TODAY() &lt; eStar_Original_Due_Date__c),
        NULL,
    IF (Is_eSTAR_Order_Open_Closed__c = 'Closed',
        BOM_Returned_Date__c  - eStar_Ship_Date__c,
        NULL
       )
      )
)

/*
--If eStar Order Status = Open AND Today&gt; eStar Due Date,
--Today() - eStar Current Due Date
--If eStar Order Status = Open AND Today &lt; eStar Due Date,
--NULL
--If eStar Order Status = Closed ,
--BOM Returned Date – eStar Current Due Date
*/</formula>
        <label>POV Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POV_Decision_Date__c</fullName>
        <description>Decision Date</description>
        <inlineHelpText>Estimated date for decision for solution acceptance (Tech Win / Tech Loss). This is NOT the estimated close date for the opportunity. NOTE: Once the POV is completed, update this with the actual date the customer provided a Technical Win/Loss decision.</inlineHelpText>
        <label>POV Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POV_Description__c</fullName>
        <description>Describe the overall value a successful Eval will have to Sourcefire</description>
        <inlineHelpText>Document relevant information of the sales opportunity to help review the POV. Include reasons for POV, relevant background information, qualification information, etc.</inlineHelpText>
        <label>POV Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>POV_Due_Date__c</fullName>
        <formula>POV_Duration_Days__c  + POV_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POV Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POV_Duration_Days__c</fullName>
        <defaultValue>90</defaultValue>
        <description>Proof of value Duration (Days)</description>
        <inlineHelpText>Expected duration of POV should be 90 days</inlineHelpText>
        <label>POV Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POV_Execution_Days__c</fullName>
        <formula>if (Final_Approval_Date__c  &gt; POV_Reported_Decision_Date__c, Final_Approval_Date__c - POV_Reported_Decision_Date__c, POV_Reported_Decision_Date__c - Final_Approval_Date__c)</formula>
        <label>POV Execution Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POV_ID__c</fullName>
        <description>Auto generated POV ID</description>
        <displayFormat>POV-{0}</displayFormat>
        <label>POV ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>POV_Outcome_Tech_Lost_Cancelled_Reason__c</fullName>
        <description>POV Outcome-Tech &gt; Lost/Cancelled Reason</description>
        <label>POV Outcome-Tech &gt; Lost/Cancelled Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tech Win-Won Over Competitor</fullName>
                </value>
                <value>
                    <fullName>Tech Win-ELA</fullName>
                </value>
                <value>
                    <fullName>Tech Win-Order Submitted</fullName>
                </value>
                <value>
                    <fullName>Tech Loss-Loss To Competitor</fullName>
                </value>
                <value>
                    <fullName>Tech Loss-Loss Technical/Detection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POV_Outcome__c</fullName>
        <description>Once the POV has been completed. Document the technical decision maker’s Win / Loss decision about the Cisco solution offered. (This is separate from the sales opportunity decision)</description>
        <inlineHelpText>Once the POV has been completed. Document the technical decision maker’s Win / Loss decision about the Cisco solution offered. (This is separate from the sales opportunity decision)</inlineHelpText>
        <label>POV Outcome-Tech</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tech Win</fullName>
                </value>
                <value>
                    <fullName>Tech Loss</fullName>
                </value>
                <value>
                    <fullName>Tech No Decision</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POV_Product_Cloud_Location__c</fullName>
        <description>For AMP for Endpoints, select any appropriate Cloud location; for ThreatGrid, select North America.

Field Placement: Add to POV Description and Products section, after PoV Order Category field.

Validation Rule: If AMP for Endpoints; AMP Threat Grid; is selected, POV Product Cloud Location field is required to be completed.

Field should be visible to all POV users, and added to all POV Custom Report Types.</description>
        <inlineHelpText>For AMP for Endpoints, select any appropriate Cloud location; for ThreatGrid, select North America</inlineHelpText>
        <label>POV Product Cloud Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>POV_Solution_Advanced_Threat__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>European Union</fullName>
                </value>
                <value>
                    <fullName>APJC</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POV_Reported_Decision_Date__c</fullName>
        <inlineHelpText>POV Reported Decision Date set based on PoV Outcome</inlineHelpText>
        <label>POV Reported Decision Date</label>
        <type>Date</type>
    </fields>
</CustomObject>